# CPU-Ray-Tracing

./: CMakeLists.txt
Raytracing/: main  main.cpp
Raytracing/Assets/: Basic_Image_1.ppm  Basic_Image_2.ppm  Basic_Image_4.ppm
Raytracing/Core/: CMakeLists.txt
Raytracing/Core/Camera/: Camera.h
Raytracing/Core/Math/: CMakeLists.txt  HitRecord.h  Hittable.h  Hittablelist.h  Material.cpp  Material.h  Ray.h  Utils.h  Vector.h
Raytracing/Core/Shape/: Sphere.h
Raytracing/System/: ThreadPool.h
Raytracing/main.dSYM/Contents/Resources/DWARF/: main
Raytracing/main.dSYM/Contents/Resources/Relocations/x86_64/: main.yml
